--- a/PubBall/AndroidManifest.xml
+++ b/PubBall/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
+            android:screenOrientation="landscape"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:name="com.example.pubball.GameActivity"
             android:label="@string/app_name" 
