--- a/PubBall/project.properties
+++ b/PubBall/project.properties
@@ -12,3 +12,5 @@
 
 # Project target.
 target=android-17
+android.library.reference.1=..\\..\\..\\..\\Desktop\\AndEngine-GLES2
+android.library.reference.2=../../../../Desktop/AndEnginePhysicsBox2DExtension-GLES2
