--- a/Pubball_Libgdx-android/AndroidManifest.xml
+++ b/Pubball_Libgdx-android/AndroidManifest.xml
@@ -13,7 +13,8 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+            android:permission="android.permission.WAKE_LOCK">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
